Bug 318116: Overflowing inlines in fixed-width RTL blocks overflow to the right instead of to the left. r=dbaron sr=roc